--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -86,7 +86,7 @@ body.video cite { color: #fff; }
     height: 175px;
 }
 #masthead-no-image-header #logo img {
-    margin-top: 60px;
+    /*margin-top: 60px;*/
 }
 
 /* Masthead › small-only
@@ -167,7 +167,7 @@ body.video cite { color: #fff; }
 
 @media #{$xlarge-up} {
     #logo img {
-        margin-top: 110px;
+        /*margin-top: 110px;*/
     }
     #masthead {
         height: 380px;
