--- a/_includes/_frontpage-widget.html
+++ b/_includes/_frontpage-widget.html
@@ -22,8 +22,8 @@
 			{% if widget_image != empty %}<img src="{{ widget_image }}" alt="" />{% endif %}
 		</a>
 	{% endif %}
-	<h2 class="font-size-h3 t10">{{ include.widget.title }}</h2>
-
+	<h2 class="font-size-h2 t10">{{ include.widget.title }}</h2>
+	<h3 class="font-size-h3 t10">{{ include.widget.date }}</h3>
 	{% if include.widget.text != empty %}<p>{{ include.widget.text }}</p>{% endif %}
 	{% if widget_url != empty %}<p><a class="button tiny radius" href="{{ widget_url }}">{{ site.data.language.more }}</a></p>{% endif %}
 </div>
