--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -72,6 +72,9 @@
           {% endif %}
         {% endfor %}
         {% comment %}   First loop finished 1   {% endcomment %}
+        {% for social_item in site.data.socialmedia %}
+        <li><a href="{{ social_item.url }}" target="_blank" class="{{ social_item.class }}" title="{{ social_item.title }}">{{ social_item.html }}</a></li>
+        {% endfor %}        
       </ul>
 {% comment %}
 
